Remote app registration & user statistics

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -10,6 +10,10 @@ h3 {
   line-height: 1.2106;
 }
 
+.aui-panel {
+  padding: 0 16px;
+}
+
 .module {
   box-sizing: border-box;
   margin: 16px 0 0 0;
