--- a/app/views/userprofile.scala.html
+++ b/app/views/userprofile.scala.html
@@ -13,20 +13,21 @@
 </head>
   <body>
 
+    <div class="content-body aui-panel">
+      <div class="module">
+        <div class="mod-header">
+          <h3>Summary</h3>
+        </div>
 
-    <div class="module">
-      <div class="mod-header">
-        <h3>Summary</h3>
+        <div class="mod-content">
+          Current user is @userId
+        </div>
       </div>
 
-      <div class="mod-content">
-        Current user is @userId
-      </div>
-    </div>
-
-    <div class="module">
-      <div class="mod-header">
-        <h3>Details</h3>
+      <div class="module">
+        <div class="mod-header">
+          <h3>Details</h3>
+        </div>
       </div>
     </div>
 
